    * [HIVE-4498] - TestBeeLineWithArgs.testPositiveScriptFile fails
    * [HIVE-4500] - HS2 holding too many file handles of hive_job_log_hive_*.txt files
    * [HIVE-4505] - Hive can't load transforms added using 'ADD FILE'
    * [HIVE-4527] - Fix eclipse project template
    * [HIVE-4784] - ant testreport doesn't include any HCatalog tests

** Improvement
    * [HIVE-581] - improve group by syntax
    * [HIVE-948] - more query plan optimization rules 
    * [HIVE-1953] - Hive should process comments in CliDriver
    * [HIVE-2439] - Upgrade antlr version to 3.4
    * [HIVE-2477] - Use name of original expression for name of CAST output
    * [HIVE-3004] - RegexSerDe should support other column types in addition to STRING
    * [HIVE-3231] - msck repair should find partitions already containing data files
    * [HIVE-3252] - Add environment context to metastore Thrift calls
    * [HIVE-3401] - Diversify grammar for split sampling
    * [HIVE-3431] - Avoid race conditions while downloading resources from non-local filesystem
    * [HIVE-3492] - Provide ALTER for partition changing bucket number 
    * [HIVE-3527] - Allow CREATE TABLE LIKE command to take TBLPROPERTIES
    * [HIVE-3531] - Simple lock manager for dedicated hive server
    * [HIVE-3564] - hivetest.py: revision number and applied patch
    * [HIVE-3628] - Provide a way to use counters in Hive through UDF
    * [HIVE-3633] - sort-merge join does not work with sub-queries
    * [HIVE-3672] - Support altering partition column type in Hive
    * [HIVE-3708] - Add mapreduce workflow information to job configuration
    * [HIVE-3709] - Stop storing default ConfVars in temp file
    * [HIVE-3710] - HiveConf.ConfVars.HIVE_STATS_COLLECT_RAWDATASIZE should not be checked in FileSinkOperator
    * [HIVE-3762] - Minor fix for 'tableName' in Hive.g
    * [HIVE-3784] - de-emphasize mapjoin hint
    * [HIVE-3793] - Print number of fetched rows after query in CliDriver